# crypto-spot-collector

./: .env.example  .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  AVERAGE_PRICE_FIX_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  average_price_logic_analysis.md  demo_average_price.py  demo_trailing_stop.py  deploy.sh  docker-compose.yml  download_historical_data.sh  import_historical_data.py  init.sql  pyproject.toml  test_db.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sql  setup.sh
.github/workflows/: main.yml
docs/: ADDING_STRATEGIES.md  TRAILING_STOP.md  ohlcv_repository.md
src/: __init__.py
src/crypto_spot_collector/: __init__.py  database.py  models.py
src/crypto_spot_collector/apps/: CONFIG.md  buy_perp.py  buy_spot.py  discord_appliation.py  hyperliquid.py  hyperliquid_perp.py  import_historical_data.py  insert_update_trade_data.py  secrets.json.sample  settings.json  settings.json.sample
src/crypto_spot_collector/checkers/: README.md  __init__.py  base_checker.py  sar_checker.py
src/crypto_spot_collector/discord/: __init__.py
src/crypto_spot_collector/exchange/: __init__.py  bybit.py  hyperliquid.py  hyperliquid_ws.py  interface.py  trailing_stop_manager.py  trailing_stop_processor.py  types.py
tests/: __init__.py  test_average_price_calculation.py  test_bybit_sell_spot.py  test_exchange_interface.py  test_market_data_provider.py  test_order_repository.py  test_sar_checker.py  test_trailing_stop_manager.py  test_version.py
(+44 files in other folders)
